# AEGEN

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  INFORME_TECNICO_FINAL.md  OBSERVABILIDAD_GUIA.md  OWNERS.md  PLAN_DE_ACCION.md  PRD.md  PROJECT_OVERVIEW.md  README.md  compose.yml  docker-compose.override.yml  docker-compose.yml  history_llm_chat.txt  inspect_memory.py  makefile  pyproject.toml  quality_gates.yml  rules.md  tasks.json
.architecture/: README.md  development-workflow.md  pre-code-checklist.md  review-prompts.md
.architecture/templates/: specialist-template.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
adr/: ADR-0004-Ruff-Consolidation.md  ADR-0007-fase3c-vector-multiagent.md  ADR-0008-advanced-multitenant-features.md  ADR-0009-routing-performance-migration.md  ADR-0010-observability-llm-tracing.md  ADR-0011-message-bundling-intelligent-grouping.md  ADR-0012-diskless-memory-architecture.md  ADR-0013-arquitectura-personalidad.md  ADR-0014-mejora-precision-enrutamiento.md  ADR-0015-localizacion-y-enrutamiento-robusto.md  ADR-0016-localization-v2-and-profiling.md  ADR-0017-recovery-architecture.md  ADR-0019-sistema-identidad-estructural.md  ADR-0020-multi-model-architecture.md  ADR-0021-procedencia-y-seguridad-clinica.md  ADR-0022-knowledge-watcher-async-polling.md  ADR-0023-overhaul-personalidad-reflejo-natural.md  ADR-0024-reparacion-memoria-cognicion.md  ADR-0025-observabilidad-conocimiento-global.md  ADR-0026-motor-seguimiento-hitos.md  ADR-0027-mensajeria-proactiva-outbox.md  ADR-0028-cerebro-dual-motores-especializados.md  plantilla-adr.md
adr/archive/: ADR-0001-MasterRouter.md  ADR-0002-RedisSessionMemory.md  ADR-0003-Dynamic-Tool-Based-Routing.md  ADR-0005-Conversational-Memory-Architecture.md
adr/archivo/: ADR-0007-fase3c-vector-multiagente.md  ADR-0010-observabilidad-trazado-llm.md  ADR-0011-agrupamiento-mensajes-inteligente.md  ADR-0018-arquitectura-memoria-unificada.md
docs/: ADR-0006-conversational-architecture-refactor.md  ADR-0007-phase3c-chromadb-multiagent.md  IDEAS_Y_MEJORAS.md  REDIS_SETUP.md  TECHNICAL_ARCHITECTURE.md  deployment_gcp_free.md  development.md  observability.md
docs/architecture/: configuracion_calidad.yml  estandares_desarrollo.md
docs/arquitectura/: 00-resumen-sistema-soporte-vital.md  comunicacion-agentes.md  estandares-desarrollo.md  flujos-datos.md  sistema-memoria.md
docs/guias/: desarrollo.md  manual-desarrollo.md  manual-despliegue.md  manual-gestion-conocimiento.md
docs/investigacion/: investigacion_identidad_openclaw.md
docs/planes/: 2026-02-11-refactorizacion-webhooks.md  2026-02-12-herramienta-ingesta-masiva.md  2026-02-21-calibracion-personalidad-ux.md  2026-02-21-motor-proposito-proactividad.md  2026-02-22-refinamiento-fluidez-cognitiva.md  2026-02-22-reingenieria-estabilidad-integral.md  MASTER_PLAN_v0.7.0.md  PLAN-MAESTRO-ESTRATEGICO.md  plan-deuda-tecnica-refactorizacion.md  plantilla-plan.md  v0.7.0-saneamiento-y-evolucion.md  v0.7.1-containerizacion-polling-telegram.md  v0.8.1-B.1-bulk-ingestor.md  v0.8.1-reparacion-memoria-cognicion.md  v0.8.2-limpieza-agentes-fase1.md  v0.8.3-observabilidad-conocimiento-global.md
docs/reportes/: v0.7.2-analisis-estabilidad-y-hallazgos-residuales.md  v0.7.2-analisis-fallo-ingesta-global.md  v0.7.2-analisis-forense-alucinaciones.md
docs/research/: investigacion_memoria_openclaw.md
langchain_agents/search_yt_agent/: Dockerfile  requirements.txt
playbooks/: añadir_tool.md
prompts/: CHANGELOG.md
prompts/planner_agent/: v1.yaml
scripts/: __init__.py  admin_interface.html  archive_legacy.py  check_cloud_files.py  check_models.py  check_webhook.py  clean_voseo_profile.py  cleanup_knowledge.py  diag_rag_25.py  diagnostic.py  diagnostic_net.py  index_knowledge.py  list_models.py  load_cbt_knowledge.py  migrate_cloud_memory.py  migrate_dialects.py  migrate_provenance.py  proxy_hunter.py  purge_failed_files.py  quality_gates.py  reset_user_memory.py  sanitize_memory.py  set_webhook.py  setup_webhook.py  simple_check.py  sync_docs.py  sync_knowledge.py  test_llm_connection.py  test_memory_fix.py  test_rag_new_sdk.py  test_vector_cleanup.py  upload_user_history.py  verify_google_rag.py  verify_phase1.py  verify_phase2.py  verify_phase3.py  verify_phase4.py
scripts/utils/: proxy_hunter.py
src/: __init__.py  main.py  verify_google_rag.py
src/agents/: __init__.py  config.py  file_handler_agent.py  file_readers.py  file_validators.py  orchestrator.py  orchestrator_legacy.py  orchestrator_temp_fix.py
src/api/: __init__.py
src/collections/: __init__.py  collections_factory.py  contribution_handler.py  global_manager.py  reserved_collections.py
src/core/: __init__.py  conversation_memory.py  dependencies.py  engine.py  error_handling.py  exceptions.py  ingestion_buffer.py  lingua_guard.py  localization.py  logging_config.py  message_utils.py  middleware.py  profile_context.py  profile_evolution.py  profile_localization.py  profile_manager.py  profile_seeder.py  profiling_manager.py  registry.py  resilience.py  role_manager.py  routing_models.py  schemas.py  secure_chroma_manager.py  session_consolidation.py  session_manager.py  session_utils.py  user_preferences.py  vector_memory_manager.py
src/memory/: __init__.py  backup.py  chunker.py  cloud_gateway.py  consistency_manager.py  consolidation_worker.py  deduplicator.py  embeddings.py  evolution_applier.py  evolution_detector.py  fact_extractor.py  fact_utils.py  global_knowledge_loader.py  hybrid_coordinator.py  hybrid_search.py  ingestion_pipeline.py  json_sanitizer.py  keyword_search.py  knowledge_auditor.py  knowledge_base.py  knowledge_watcher.py  long_term_memory.py  maintenance_job.py  memory_factory.py  migration.py  milestone_extractor.py  recovery_manager.py  redis_buffer.py  redis_fallback.py  schema.sql  session_logger.py  session_processor.py  sqlite_store.py  vector_memory_manager.py  vector_search.py
tests/: conftest.py  test_file_handler_agent.py  test_modular_agents.py  test_role_manager.py
(+240 files in other folders)
