[build-system]
requires = ["setuptools >= 65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegen"
version = "0.1.0"
description = "Sistema multiagente"
authors = [{ name = "Jhonn Muñoz C.", email = "jhonnmcortes@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi",
    "fastapi-cache2>=0.2.0",
    "google",
    "google-api-python-client",
    "google-genai",
    "google-generativeai",
    "httpx",
    "langchain",
    "langchain[google-genai]",
    "langchain-tavily",
    "langgraph",
    "langsmith",
    "numpy",
    "openai-whisper",
    "pandas",
    "psutil",
    "pydantic-settings",
    "prometheus-fastapi-instrumentator",
    "python-dotenv",
    "python-json-logger",
    "yt-dlp",
    "redis[hiredis]",
    "structlog",
    "uvicorn[standard]>=0.29.0,<0.30.0",
    "python-telegram-bot[job-queue]>=21.0.1,<22.0.0",
    "chromadb",
    "whisper",
    "Pillow",
    "pytesseract",
    "pypdf",
    "python-docx",
    "python-pptx",
    "openpyxl",
    "aiofiles",
]

[project.optional-dependencies]
dev = ["aegen[test, lint, doc]", "ipykernel", "pyngrok"]

test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-snapshot",
    "respx",
    "freezegun",
]

lint = [
    "ruff",
    "mypy",
    "pre-commit",
    "bandit",
    "safety",
    # --- Stubs de Tipos ---
    "types-redis",
    "types-aiofiles",
    "types-PyYAML",
    # "Types-requests",
]

doc = ["mkdocs", "mkdocs-material", "pymdown.extensions"]

[project.urls]
Homepage = "https://github.com/JhomC3/aegen"
Documentation = "https://github.com/JhomC3/aegen/docs"
Repository = "https://github.com/JhomC3/aegen"
Issues = "https://github.com/JhomC3/aegen/issues"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "N", "UP", "ASYNC", "TID"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
preview = true

[tool.mypy]
python_version = "3.13"
# warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

asyncio_mode = "auto"

[tool.bandit]
skips = ["B101"]

# disallow_untyped_def = true # Asegúrate de que esta línea y las siguientes usen # para comentarios si estaban activas
# warn_redundant_cast = true
# warn_unuused_ignore = true
