[build-system]
requires = ["setuptools >= 65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegen"
version = "0.7.2"
description = "Sistema multiagente"
authors = [{ name = "Jhonn Muñoz C.", email = "jhonnmcortes@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi",
    "fastapi-cache2>=0.2.0",
    "google",
    "google-api-python-client",
    "google-genai",
    "google-generativeai",
    "httpx",
    "langchain",
    "langchain-groq",
    "langchain-openai",
    "langchain[google-genai]",
    "langchain-tavily",
    "langgraph",
    "langsmith",
    "numpy",
    # "faster-whisper",  # Eliminado para optimización de memoria (GCP Free Tier)
    "pandas",
    "psutil",
    "pydantic-settings",
    "prometheus-fastapi-instrumentator",
    "python-dotenv",
    "python-json-logger",
    "yt-dlp",
    "redis[hiredis]",
    "structlog",
    "uvicorn[standard]>=0.29.0,<0.30.0",
    "python-telegram-bot[job-queue]>=21.0.1,<22.0.0",
    "Pillow",
    "pytesseract",
    "pypdf",
    "python-docx",
    "python-pptx",
    "openpyxl",
    "aiofiles",
    "pyyaml>=6.0.2",
    "aiosqlite>=0.22.1",
    "sqlite-vec>=0.1.6",
    "sqlean-driver>=0.2.0",
    "google-cloud-storage",
    "pymupdf",
]

[project.optional-dependencies]
dev = ["aegen[test, lint, doc]", "ipykernel", "pyngrok"]

test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-snapshot",
    "respx",
    "freezegun",
]

lint = [
    "ruff",
    "mypy",
    "pre-commit",
    "safety",
    # --- Stubs de Tipos ---
    "types-redis",
    "types-aiofiles",
    "types-PyYAML",
    # "Types-requests",
]

doc = ["mkdocs", "mkdocs-material", "pymdown.extensions"]

[project.urls]
Homepage = "https://github.com/JhomC3/aegen"
Documentation = "https://github.com/JhomC3/aegen/docs"
Repository = "https://github.com/JhomC3/aegen"
Issues = "https://github.com/JhomC3/aegen/issues"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W", "F",     # PyCodeStyle + Pyflakes (base)
    "I",                # Import sorting
    "B",                # Bugbear (bugs comunes)
    "N",                # Naming conventions
    "UP",               # PyUpgrade (modernizar syntax)
    "ASYNC",            # Async patterns
    "TID",              # Tidy imports
    "T20",              # Print statements (enforcement de "nunca print()")
    "C4",               # Comprehensions
    "C90",              # McCabe complexity
    "SIM",              # Simplificación
    "RET",              # Return patterns
    "PTH",              # Pathlib over os.path
    "S",                # Security (reemplaza bandit standalone)
]
ignore = ["S101"]  # assert OK en tests (reemplaza bandit B101 skip)

[tool.ruff.lint.mccabe]
max-complexity = 10  # enforcement real de complejidad

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "T201", "S105", "S106", "S108", "E501", "PTH", "F841", "F821", "N806", "SIM117"]  # asserts, print, hardcoded tokens, insecure temp files OK en tests
"scripts/**" = ["T20", "S310", "S602", "S603"]  # print, urlopen, subprocess OK en scripts CLI
"src/main.py" = ["S104"]  # Binding to 0.0.0.0 is standard for Docker containers
"src/personality/prompt_builder.py" = ["C901", "I001"]  # I001: zoneinfo import sorting differs across ruff versions

[tool.ruff.format]
quote-style = "double"
preview = true

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
explicit_package_bases = true
ignore_missing_imports = true       # TODO: Eliminar cuando stubs estén completos
show_error_codes = true             # saber qué se ignora
disallow_untyped_defs = true        # el más importante: forza type hints
warn_return_any = false              # previene erosión del tipado
warn_redundant_casts = false         # limpieza
warn_unused_ignores = false          # no acumular ignores obsoletos
no_implicit_optional = true         # forza Optional[X] explícito
check_untyped_defs = true           # chequea interiores de funciones sin tipos


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-fail-under=50"
testpaths = ["tests"]

asyncio_mode = "auto"
